package ua.khpi.oop.lab02;

import java.util.List;

public class Client {
    private List<RepairRequest> requests;
}