package ua.khpi.oop.lab02;

import java.util.List;

public class Technician {
    private List<RepairRecord> records;
}